--- a/design/template/debug/controller.phtml
+++ b/design/template/debug/controller.phtml
@@ -95,7 +95,7 @@ $session = Mage::getSingleton('core/session');
                     </tr>
                     <?php $row++; ?>
                 <?php endforeach; ?>
-            <?php endif ?>
+            <?php endif; ?>
 		</tbody>
 		<?php endforeach; ?>
 	</table>
